providers/opa/invalid-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - demo.tes.rancher-eks.cloud-platform.service.justice.gov.uk
    secretName: nginx-tls-prod
  rules:
  - host: demo.tes.rancher-eks.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
